--- a/components/Mission.module.css
+++ b/components/Mission.module.css
@@ -4,7 +4,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    overflow-x: clip;
 }
 
 /* The "Physical" Paper Card */
